set the card margin, buttons and images

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="row">
                 
                     <div class="col-md-4">
-                        <div class="card h-100">
-                            <img class="card-img-top rounded-circle"
+                        <div class="card h-100 bg-light m-3">                            
+                            <img class="rounded-circle m-4"
                                 src="https://static.bhphoto.com/images/images250x250/1477493152000_1292140.jpg"
                                 alt="lens 70-200">
                             <div class="card-body">
@@ -60,12 +60,17 @@
                                         </li>
                                     </ul>
                                 </p>
+                                
+                            </div>
+                            <div class="m-2 mb-3">
+                                    <a href="https://www.bhphotovideo.com/c/product/1292140-REG/nikon_af_s_nikkor_70_200mm_f_2_8e.html"
+                                     class="btn btn-primary mx-auto d-block">Buy Me</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card h-100 bg-light">
-                            <img class="card-img-top rounded-circle" src="https://static.bhphoto.com/images/images250x250/1303923681000_766516.jpg"
+                        <div class="card h-100 bg-light m-3">
+                            <img class="rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1303923681000_766516.jpg"
                                 alt="lens 50" class="rounded">
                             <div class="card-body">
                                 <h4 class="card-title">Nikon AF-S NIKKOR 50mm f/1.8G Lens</h4>
@@ -82,23 +87,25 @@
                                         </li>
                                         <li>
                                             Super Integrated Coating
+                                        </li>
+                                        <li>
                                             Silent Wave Motor AF System
                                         </li>
                                     </ul>
                                 </p>
                             </div>
-                            <div>
+                            <div class="m-2 mb-3">
                                     <a href="https://www.bhphotovideo.com/c/product/766516-USA/Nikon_2199_AF_S_Nikkor_50mm_f_1_8G.html"
                                      class="btn btn-primary mx-auto d-block">Buy Me</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card h-100 bg-light">
-                            <img class="card-img-top rounded-circle" src="https://static.bhphoto.com/images/images250x250/1303923681000_766516.jpg"
+                        <div class="card h-100 bg-light m-3">
+                            <img class="rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1551367709000_606792.jpg"
                                 alt="lens 35" class="rounded-circle">
                             <div class="card-body">
-                                <h4 class="card-title">Nikon AF-S NIKKOR 50mm f/1.8G Lens</h4>
+                                <h4 class="card-title">Nikon AF-S DX NIKKOR 35mm f/1.8G Lens</h4>
                                 <p class="card-text">
                                     <ul>
                                         <li>
@@ -116,6 +123,10 @@
                                         </li>
                                     </ul>
                                 </p>
+                            </div>
+                            <div class="m-2 mb-3">
+                                    <a href="https://www.bhphotovideo.com/c/product/606792-USA/Nikon_2183_AF_S_Nikkor_35mm_f_1_8G.html"
+                                     class="btn btn-primary mx-auto d-block">Buy Me</a>
                             </div>
                         </div>
                     </div>
