add img fluid to image and mb only to the main card

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="container">
             <div class="row">
                 
-                    <div class="col-md-4">
-                        <div class="card h-100 bg-light m-3">                            
-                            <img class="rounded-circle m-4"
+                    <div class="col-md-4 mb-5">
+                        <div class="card h-100 bg-light">                            
+                            <img class="img-fluid rounded-circle m-4"
                                 src="https://static.bhphoto.com/images/images250x250/1477493152000_1292140.jpg"
                                 alt="lens 70-200">
                             <div class="card-body">
@@ -68,9 +68,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card h-100 bg-light m-3">
-                            <img class="rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1303923681000_766516.jpg"
+                    <div class="col-md-4 mb-5">
+                        <div class="card h-100 bg-light">
+                            <img class="img-fluid rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1303923681000_766516.jpg"
                                 alt="lens 50" class="rounded">
                             <div class="card-body">
                                 <h4 class="card-title">Nikon AF-S NIKKOR 50mm f/1.8G Lens</h4>
@@ -100,9 +100,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card h-100 bg-light m-3">
-                            <img class="rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1551367709000_606792.jpg"
+                    <div class="col-md-4 mb-5">
+                        <div class="card h-100 bg-light">
+                            <img class="img-fluid rounded-circle m-4" src="https://static.bhphoto.com/images/images250x250/1551367709000_606792.jpg"
                                 alt="lens 35" class="rounded-circle">
                             <div class="card-body">
                                 <h4 class="card-title">Nikon AF-S DX NIKKOR 35mm f/1.8G Lens</h4>
